kubernetes/tracking-contratospr.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracking-contratospr
spec:
  type: NodePort
  ports:
    - name: tracking-contratospr
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: tracking-contratospr

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tracking-contratospr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        name: tracking-contratospr
        app: tracking-contratospr
    spec:
      containers:
        - name: tracking-contratos-pr
          image: gcr.io/tracking-contratos-pr/tracking-contratos-pr:latest
          imagePullPolicy: Always
          command: ['/bin/sh', '-c']
          args:
            [
              'python manage.py collectstatic --no-input && gunicorn -b 0.0.0.0:8000 contratospr.wsgi',
            ]
          ports:
            - name: web
              containerPort: 8000
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /health/liveness/
              port: 8000

          readinessProbe:
            httpGet:
              path: /health/readiness/
              port: 8000
